# independent-wire

./: .env.example  .gitignore  BACKLOG-CLUSTER-FORMATION-SINGLE-ACTOR.md  BACKLOG-ENGLISH-ACTOR-NAME-NORMALIZATION.md  BACKLOG-F2-CANONICAL-NAME-CHOICE.md  BACKLOG-F2-PERSPECTIVE-CLUSTER-ASSIGNMENT.md  BACKLOG-GERMAN-RENDER-LABELS.md  BACKLOG-GERMAN-STATIC-PAGES.md  BACKLOG-HYDRATION-HEDGE-ECHO.md  BACKLOG-INTRADAY-COLLECTOR.md  BACKLOG-OG-IMAGE-PNG-CONVERSION.md  BACKLOG-OLLAMA-MIGRATION.md  BACKLOG-P2-EVIDENCE-ANCHORING.md  BACKLOG-PERSPECTIVE-CLUSTER-FORMATION-ITERATION.md  BACKLOG-QA-DIVERGENCE-STAGE-SPLIT.md  BACKLOG-RESEARCHER-REGISTRY.md  BACKLOG-SOURCE-DIVERSITY-V2.md  BACKLOG-TOPIC-CONFLATION-CLUSTERING.md  BACKLOG-TP-DATA-LEVERAGE.md  BACKLOG-VISUAL-LANGUAGE.md  BACKLOG-WEBSEARCH-SUNSET.md  BACKLOG-WEEKLY-OUTLET-AUDIT.md  CLAUDE.md  COWORK-PLAYBOOK.md  COWORK-SYSTEM-SETN-SCOUT.md  COWORK-TASK-SETN-FILTER.md  README.md  REPORT-DIAGNOSTIC-2026-05-23.md  SESSION-HANDOFF-2026-03-31.md  SESSION-HANDOFF-2026-04-05.md  SESSION-HANDOFF-2026-04-06.md  SESSION-HANDOFF-2026-04-07-S2.md  SESSION-HANDOFF-2026-04-07.md  TASK-FEED-FIXES.md  TASK-PERSPEKTIV-INTEGRATION.md  TASK-QA-SIMPLIFY.md  TASK-QUICK-FIXES.md  TASK-QUICKFIXES-04-07.md  TASK-SESSION-S3.md  WP-AGENT.md  (+17 more)
.github/workflows/: deploy-site.yml
agents/_archive/: README.md  qa_analyze-INSTRUCTIONS-pre-synthesis-2026-05-30.md  writer-INSTRUCTIONS-pre-synthesis-2026-05-30.md
agents/assign_clusters/: INSTRUCTIONS.md  SYSTEM.md
agents/bias_candidate_extractor/: INSTRUCTIONS.md  SYSTEM.md
agents/bias_detector/: INSTRUCTIONS.md  SYSTEM.md
agents/bias_judge/: INSTRUCTIONS.md  SYSTEM.md
agents/collector/: AGENTS.md  ASSEMBLE.md  PLAN.md
agents/consolidator/: INSTRUCTIONS.md  SYSTEM.md
agents/curator/: AGENTS.md  INSTRUCTIONS.md  SYSTEM.md
agents/editor/: AGENTS.md  INSTRUCTIONS.md  SYSTEM.md
agents/hydration_aggregator/: AGENTS.md  PHASE1-INSTRUCTIONS.md  PHASE1-SYSTEM.md  PHASE1.md  PHASE2-INSTRUCTIONS.md  PHASE2-SYSTEM.md
agents/perspective/: INSTRUCTIONS.md
agents/perspektiv/: AGENTS.md  (+2 more)
config/: de_exonyms.json  de_places.json  de_render_labels.json  outlet_registry.json  region_buckets.json  site_config.json  sources.json  style-guide.md
docs/: ADR-COHERENCE-STAGE-DEPENDENCY-ADDENDUM-2026-05-15.md  ADR-COHERENCE-STAGE-DEPENDENCY.md  ADR-CURATOR-TRIPLE-STAGE.md  AGENT-INVENTORY.md  AGENT-IO-MAP.md  ARCH-V2-BUS-SCHEMA.md  ARCHITECTURE.md  AUDIT-CURATOR-2026-05-11.md  AUDIT-CURATOR-V4PRO-VARIANCE-2026-05-13.md  AUDIT-PIPELINE-S13-2026-04-27.md  AUDIT-TIMELINE.md  BACKLOG-BIAS-STABILITY.md  BIAS-LANGUAGE-MODEL-EVAL-2026-06-28.md  BIAS-STAGE-MODEL-EVAL-2026-07.md  CLUSTERING-EVAL-2026-05-14.md  CODE-REVIEW-2026-07-02.md  DEEPSEEK-FP8-PIN-2026-07.md  EDITOR-STAGE-MODEL-EVAL-2026-07.md  EMBEDDING-MODEL-EVAL-2026-05-13.md  FEED-CATALOG.md  GLM-PROVIDER-VERIFICATION-2026-07.md  HYDRATION-P2-MODEL-EVAL-2026-07.md  INTRADAY-COLLECTOR.md  MAC-MINI-RUNNER.md  MAINTENANCE.md  PERSPECTIVE-STAGE-MODEL-EVAL-2026-07.md  QA-STAGE-MODEL-EVAL-SHADOW-BACKFILL.md  RESEARCH-BIAS-MULTITURN.md  RESEARCH-OPENROUTER-STRUCTURED-OUTPUTS.md  ROADMAP.md  SESSION-HANDOFF-2026-03-30.md  SOURCE-CAP.md  TASKS.md  VISUALIZATIONS.md  WORKSTREAM-MULTILINGUAL-EXPANSION.md  WORKSTREAM-PIPELINE-SIMPLIFICATION.md  WRITER-STAGE-MODEL-EVAL-2026-07.md
examples/: topic-package-example.json
schema/: SCHEMA.md  topic-package-v1.json
scripts/: audit_cluster_internal.py  audit_cluster_llm_assignment.py  audit_cluster_quality.py  audit_outlet_registry.py  audit_v4pro_variance.py  calibrate_gravitational.py  coherence_calibrate.py  collector_run.sh  compare_pipelines.py  curator_monitor.py  curator_shadow.py  daily_run.sh  eval_clustering.py  eval_common.py  eval_curator_models.py  eval_curator_variance.py  eval_embedding_models.py  eval_hydration_phase2.py  eval_researcher_assemble.py  eval_researcher_plan.py  eval_wave2_bias_language.py  eval_wave2_curator_topic_discovery.py  eval_wave2_editor.py  eval_wave2_hydration_phase2.py  eval_wave2_perspective.py  eval_wave2_resolve_actor_aliases.py  evidence_terrain.py  fetch_feeds.py  generate-visuals.py  load_translate_de.sh  migrate_single_voices_in_tp_json.py  migrate_what_is_missing_in_tp_json.py  org.independent-wire.collector.plist  org.independent-wire.translate-de.plist  publish.py  publish_de.py  reaudit_cluster_quality_recalibrated.py  render.py  render_labels.py  run.py  (+25 more)
site/: CNAME  about.html  feed.xml  impressum.html  index.html  privacy.html  robots.txt  sitemap.xml
src/: agent.py  agent_stages.py  bias_composite.py  bus.py  curator_metrics.py  editor_fallback.py  flash_stage_fallback.py  hydration.py  hydration_aggregator.py  hydration_phase2_fallback.py  hydration_urls.py  models.py  outlet_registry.py  perspective_fallback.py  pipeline.py  pipeline_hydrated.py  qa_fallback.py  region_buckets.py  render.py  schemas.py  stage.py  url_canonical.py  writer_fallback.py
tests/: test_actors_section_render.py  test_agent.py  test_agent_provider_routing.py  test_agent_stages.py  test_assemble_curator_topics.py  test_assign_clusters_stage.py  test_bias_stage_split.py  test_bugfixes.py  test_bus_invariants.py  test_canonical_actors_consumers.py  test_cluster_counts.py  test_cluster_id_join.py  test_clustering_eval.py  test_coherence_stage.py  test_consolidate_actors.py  test_curator_monitor.py  test_curator_shadow.py  test_curator_topic_discovery_stage.py  test_editor_swap_glm.py  test_evidence_terrain.py  test_fetch_feeds.py  test_filter_media_actors_quoted.py  test_flash_stage_fallback.py  test_gravitational_assign_stage.py  test_integration.py  test_intraday_collector.py  test_json_repair.py  test_llm_stage_loud_logging.py  test_madlad_tok_equiv.py  test_meta_transparency_fix.py  test_migrate_what_is_missing.py  test_nonlatin_feed_integrity.py  test_outlet_registry.py  test_partition_canonical_actors_by_evidence.py  test_perspective_actor_ids.py  test_perspective_swap_sonnet5.py  test_perspektiv_integration.py  test_pipeline.py  test_pre_cluster_stage.py  test_propagate_outlet_metadata.py  (+21 more)
(+960 files in other folders)
