[project]
name = "independent-wire"
version = "0.1.0"
description = "Open-source AI agents for transparent, multi-perspective news production"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "Deniz Schwenk"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "openai>=1.0",
    "httpx",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
search-brave = []              # Brave uses only httpx (already a core dep)
search-duckduckgo = ["duckduckgo-search"]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://independent-wire.org"
Repository = "https://github.com/deniz-schwenk/independent-wire"
Documentation = "https://github.com/deniz-schwenk/independent-wire/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
