[project]
name = "independent-wire"
version = "0.1.0"
description = "Open-source AI agents for transparent, multi-perspective news production"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "Deniz Schwenk"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "openai>=1.0",
    "httpx",
    "feedparser",
    "json-repair",
    "pydantic>=2.0",
    # Multilingual sentence embeddings for CoherenceStage (passive cluster-
    # coherence measurement, see docs/ADR-COHERENCE-STAGE-DEPENDENCY.md).
    # Version-pinned because fastembed >=0.6 switched paraphrase-multilingual-
    # MiniLM-L12-v2 from CLS-token to mean-pooled output — any version change
    # would silently shift every coherence score. Model name pinned in
    # src/stages/coherence.py::MODEL_NAME for the same reason.
    "fastembed==0.8.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
search-brave = []              # Brave uses only httpx (already a core dep)
search-duckduckgo = ["duckduckgo-search"]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://independent-wire.org"
Repository = "https://github.com/deniz-schwenk/independent-wire"
Documentation = "https://github.com/deniz-schwenk/independent-wire/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
