[project]
name = "independent-wire"
version = "0.1.0"
description = "Open-source AI agents for transparent, multi-perspective news production"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "Deniz Schwenk"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "openai>=1.0",
    "httpx",
    "feedparser",
    "json-repair",
    "pydantic>=2.0",
    # Multilingual sentence embeddings for CoherenceStage (passive cluster-
    # coherence measurement, see docs/ADR-COHERENCE-STAGE-DEPENDENCY.md).
    # Version-pinned because fastembed >=0.6 switched paraphrase-multilingual-
    # MiniLM-L12-v2 from CLS-token to mean-pooled output — any version change
    # would silently shift every coherence score. Model name pinned in
    # src/stages/coherence.py::MODEL_NAME for the same reason.
    "fastembed==0.8.0",
    # Agglomerative clustering for the Embed-Pre-Cluster stage (deterministic
    # micro-cluster formation, see docs/ADR-CURATOR-TRIPLE-STAGE.md and the
    # footprint addendum docs/ADR-COHERENCE-STAGE-DEPENDENCY-ADDENDUM-
    # 2026-05-15.md). Brings in scipy (+97 MB), joblib (+2 MB),
    # threadpoolctl (negligible) as transitive deps. Floor-pinned at 1.3 —
    # the cosine-metric path used here is stable across recent releases;
    # a floor pin lets routine point releases through without an upper
    # bound that would block CI on every minor sklearn upgrade.
    "scikit-learn>=1.3",
    "trafilatura>=2.0.0",
    "aiohttp>=3.14.0",
    "ddgs>=9.14.4",
    "hdbscan>=0.8.44",
    "playwright>=1.61.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
search-brave = []              # Brave uses only httpx (already a core dep)
search-duckduckgo = ["duckduckgo-search"]
dev = ["pytest", "pytest-asyncio"]
# Optional MADLAD-400 clustering translate-sidecar runtime (flag
# IW_CLUSTER_TRANSLATE, default OFF; src/stages/translate_sidecar.py).
# Sentencepiece-only inference — torch/transformers are conversion-only and
# deliberately excluded (proven byte-identical, see
# scratch/MADLAD-INTEGRATION-REQUIREMENTS.md §3). The <5 cap hedges a
# hypothetical CT2 5.x format break; the model was converted with ct2 4.5.0.
# Not installed by default — base/production install is unchanged.
multilingual = ["ctranslate2>=4.5.0,<5", "sentencepiece>=0.2.0"]
# Eval-only dependencies. Used by scripts/eval_clustering.py and the
# embedding/clustering evaluation harnesses. hdbscan is not imported by
# any module under src/ — production import graph is unaffected.
# scikit-learn is now a production dependency (see
# docs/ADR-COHERENCE-STAGE-DEPENDENCY-ADDENDUM-2026-05-15.md) and is
# also a transitive dep of hdbscan, so the explicit eval-side
# declaration would be redundant.
eval = ["hdbscan>=0.8.40"]

[project.urls]
Homepage = "https://independent-wire.org"
Repository = "https://github.com/deniz-schwenk/independent-wire"
Documentation = "https://github.com/deniz-schwenk/independent-wire/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
